--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Primer app en js</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CoderTienda</title>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <h1>Hola mundo con js</h1>
-<script src="./js/main.js"></script>
+
+    <header class="header">
+        <div class="container">
+            <div class="header-items">
+                <h1>Yo amo a la pizza</h1>
+                <a class="carrito-header"  href="./carrito.html">
+                    🛒 <span id="numerito">0</span>
+                </a>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="container">
+            <h2 class="titulo">Pizzas</h2>
+            <div class="productos" id="productos">
+                <!-- JS -->
+            </div>
+        </section>
+        <section class="container">
+            <h2 class="titulo">Carrito</h2>
+            <div class="carrito">
+                <div id="carrito-vacio">
+                    <h4>El carrito está vacío</h4>
+                </div>
+                <div class="carrito-productos d-none" id="carrito-productos">
+                    <!-- JS -->
+                </div>
+                <div class="carrito-total">
+                    <h2>Total: <span id="carrito-total">$0</span></h2>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
