--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="container">
             <div class="header-items">
-                <h1>Yo amo a la pizza</h1>
+                <h1>Yo amo a la Pizza</h1>
                 <a class="carrito-header"  href="./carrito.html">
                     🛒 <span id="numerito">0</span>
                 </a>
